fixed site alignment issues and got rid of listings background
experimenting website designs

--- a/LineWaiter/line-waiter/src/components/listing.css
+++ b/LineWaiter/line-waiter/src/components/listing.css
@@ -7,6 +7,15 @@
     gap: 2rem;
 }
 
+.listing-containerV2 {
+    display: flex;
+    flex-wrap: wrap;
+    background-color: transparent;
+    margin-bottom: 2%;
+    margin-left: 1%;
+    gap: 2rem;
+}
+
 .listing {
     margin-top: 1%;
     border: 2px solid #553A33;
