--- a/LineWaiter/line-waiter/src/pages/createlisting.css
+++ b/LineWaiter/line-waiter/src/pages/createlisting.css
@@ -4,6 +4,7 @@
     color: #2E3192FF; /* Keeping text white for readability */
     height: 150vh;
     padding:2rem;
+    width: 101.1%;
 }
 
 h2 {
